Closed Bug 788111 Opened 12 years ago Closed 12 years ago

IonMonkey: Fix double condition in OutOfLineTruncate

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
Very subtle bug, OutOfLineTruncate has to use Assembler::Above instead of Assembler::GreaterThan. GreaterThan caused us to call a stub in some cases we should handle inline.

Wins about 150 ms on bug 788007 and 5-10% on Kraken crypto-pbkdf2.
Attachment #658024 - Flags: review?(dvander)
Attachment #658024 - Flags: review?(dvander) → review+
https://hg.mozilla.org/projects/ionmonkey/rev/f508eff21690
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.