Bug 788111 - Fix double condition in OutOfLineTruncate. r=dvander